parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LEFT_SQB
    ML_COMMENT
    RIGHT_SQB
    SL_COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> program_header class_decl_list
Rule 2     program_header -> <empty>
Rule 3     class_decl_list -> class_decl class_decl_list
Rule 4     class_decl_list -> empty
Rule 5     class_decl -> class_header LEFT_CB class_body_decl_list RIGHT_CB
Rule 6     class_header -> CLASS ID
Rule 7     class_header -> CLASS ID EXTENDS ID
Rule 8     class_body_decl_list -> class_body_decl class_body_decl_cont
Rule 9     class_body_decl_cont -> class_body_decl class_body_decl_cont
Rule 10    class_body_decl_cont -> empty
Rule 11    class_body_decl -> field_decl
Rule 12    class_body_decl -> method_decl
Rule 13    class_body_decl -> constructor_decl
Rule 14    field_decl -> modifier var_decl
Rule 15    modifier -> PUBLIC STATIC
Rule 16    modifier -> PRIVATE STATIC
Rule 17    modifier -> PUBLIC
Rule 18    modifier -> PRIVATE
Rule 19    modifier -> STATIC
Rule 20    modifier -> empty
Rule 21    var_decl -> type variables SEMI_COLON
Rule 22    type -> TYPE_INT
Rule 23    type -> TYPE_FLOAT
Rule 24    type -> TYPE_BOOLEAN
Rule 25    type -> ID
Rule 26    variables -> variable variables_cont
Rule 27    variables_cont -> COMMA variable variables_cont
Rule 28    variables_cont -> empty
Rule 29    variable -> ID
Rule 30    method_decl -> method_header LEFT_CB stmt_list RIGHT_CB
Rule 31    method_header -> modifier type ID LEFT_PN formals RIGHT_PN
Rule 32    method_header -> modifier TYPE_VOID ID LEFT_PN formals RIGHT_PN
Rule 33    constructor_decl -> constructor_header LEFT_CB stmt_list RIGHT_CB
Rule 34    constructor_header -> modifier ID LEFT_PN formals RIGHT_PN
Rule 35    formals -> formal_param formals_cont
Rule 36    formals -> empty
Rule 37    formals_cont -> COMMA formal_param formals_cont
Rule 38    formals_cont -> empty
Rule 39    formal_param -> type variable
Rule 40    block -> block_init LEFT_CB stmt_list RIGHT_CB
Rule 41    block_init -> <empty>
Rule 42    stmt_list -> stmt stmt_list
Rule 43    stmt_list -> empty
Rule 44    var_decl_finalize -> var_decl
Rule 45    stmt -> if_stmt
Rule 46    stmt -> while_stmt
Rule 47    stmt -> for_stmt
Rule 48    stmt -> return_stmt
Rule 49    stmt -> stmt_expr_stmt
Rule 50    stmt -> break_stmt
Rule 51    stmt -> continue_stmt
Rule 52    stmt -> block
Rule 53    stmt -> var_decl_finalize
Rule 54    stmt -> semi_colon_stmt
Rule 55    if_stmt -> IF LEFT_PN expr RIGHT_PN stmt else_stmt
Rule 56    else_stmt -> ELSE stmt
Rule 57    else_stmt -> empty
Rule 58    while_stmt -> WHILE LEFT_PN expr RIGHT_PN stmt
Rule 59    for_stmt -> FOR LEFT_PN for_cond1 SEMI_COLON for_cond2 SEMI_COLON for_cond3 RIGHT_PN stmt
Rule 60    for_cond1 -> stmt_expr
Rule 61    for_cond1 -> empty
Rule 62    for_cond2 -> expr
Rule 63    for_cond2 -> empty
Rule 64    for_cond3 -> stmt_expr
Rule 65    for_cond3 -> empty
Rule 66    return_stmt -> RETURN return_val SEMI_COLON
Rule 67    return_val -> expr
Rule 68    return_val -> empty
Rule 69    stmt_expr_stmt -> stmt_expr SEMI_COLON
Rule 70    break_stmt -> BREAK SEMI_COLON
Rule 71    continue_stmt -> CONTINUE SEMI_COLON
Rule 72    semi_colon_stmt -> SEMI_COLON
Rule 73    literal -> int_literal
Rule 74    literal -> float_literal
Rule 75    literal -> string_literal
Rule 76    literal -> null_literal
Rule 77    literal -> boolean_true_literal
Rule 78    literal -> boolean_false_literal
Rule 79    int_literal -> INT_CONST
Rule 80    float_literal -> FLOAT_CONST
Rule 81    string_literal -> STRING_CONST
Rule 82    null_literal -> NULL
Rule 83    boolean_true_literal -> TRUE
Rule 84    boolean_false_literal -> FALSE
Rule 85    primary -> literal
Rule 86    primary -> this
Rule 87    primary -> super
Rule 88    primary -> LEFT_PN expr RIGHT_PN
Rule 89    primary -> NEW ID LEFT_PN arguments RIGHT_PN
Rule 90    primary -> lhs
Rule 91    primary -> method_invocation
Rule 92    this -> THIS
Rule 93    super -> SUPER
Rule 94    arguments -> expr arguments_cont
Rule 95    arguments -> empty
Rule 96    arguments_cont -> COMMA expr arguments_cont
Rule 97    arguments_cont -> empty
Rule 98    lhs -> field_access
Rule 99    field_access -> primary DOT ID
Rule 100   field_access -> ID
Rule 101   method_invocation -> primary DOT ID LEFT_PN arguments RIGHT_PN
Rule 102   expr -> primary
Rule 103   expr -> assign
Rule 104   assign -> lhs ASSIGN expr
Rule 105   assign -> post_assign
Rule 106   assign -> pre_assign
Rule 107   post_assign -> lhs INCREMENT
Rule 108   post_assign -> lhs DECREMENT
Rule 109   pre_assign -> INCREMENT lhs
Rule 110   pre_assign -> DECREMENT lhs
Rule 111   expr -> expr PLUS expr
Rule 112   expr -> expr MINUS expr
Rule 113   expr -> expr STAR expr
Rule 114   expr -> expr F_SLASH expr
Rule 115   expr -> expr AND expr
Rule 116   expr -> expr OR expr
Rule 117   expr -> expr EQ expr
Rule 118   expr -> expr NOT_EQ expr
Rule 119   expr -> expr LT expr
Rule 120   expr -> expr LTE expr
Rule 121   expr -> expr GT expr
Rule 122   expr -> expr GTE expr
Rule 123   expr -> PLUS expr
Rule 124   expr -> MINUS expr
Rule 125   expr -> NOT expr
Rule 126   stmt_expr -> assign
Rule 127   stmt_expr -> method_invocation
Rule 128   empty -> <empty>

Terminals, with rules where they appear

AND                  : 115
ASSIGN               : 104
BREAK                : 70
CLASS                : 6 7
COMMA                : 27 37 96
CONTINUE             : 71
DECREMENT            : 108 110
DOT                  : 99 101
ELSE                 : 56
EQ                   : 117
EXTENDS              : 7
FALSE                : 84
FLOAT_CONST          : 80
FOR                  : 59
F_SLASH              : 114
GT                   : 121
GTE                  : 122
ID                   : 6 7 7 25 29 31 32 34 89 99 100 101
IF                   : 55
INCREMENT            : 107 109
INT_CONST            : 79
LEFT_CB              : 5 30 33 40
LEFT_PN              : 31 32 34 55 58 59 88 89 101
LEFT_SQB             : 
LT                   : 119
LTE                  : 120
MINUS                : 112 124
ML_COMMENT           : 
NEW                  : 89
NOT                  : 125
NOT_EQ               : 118
NULL                 : 82
OR                   : 116
PLUS                 : 111 123
PRIVATE              : 16 18
PUBLIC               : 15 17
RETURN               : 66
RIGHT_CB             : 5 30 33 40
RIGHT_PN             : 31 32 34 55 58 59 88 89 101
RIGHT_SQB            : 
SEMI_COLON           : 21 59 59 66 69 70 71 72
SL_COMMENT           : 
STAR                 : 113
STATIC               : 15 16 19
STRING_CONST         : 81
SUPER                : 93
THIS                 : 92
TRUE                 : 83
TYPE_BOOLEAN         : 24
TYPE_FLOAT           : 23
TYPE_INT             : 22
TYPE_VOID            : 32
WHILE                : 58
error                : 

Nonterminals, with rules where they appear

arguments            : 89 101
arguments_cont       : 94 96
assign               : 103 126
block                : 52
block_init           : 40
boolean_false_literal : 78
boolean_true_literal : 77
break_stmt           : 50
class_body_decl      : 8 9
class_body_decl_cont : 8 9
class_body_decl_list : 5
class_decl           : 3
class_decl_list      : 1 3
class_header         : 5
constructor_decl     : 13
constructor_header   : 33
continue_stmt        : 51
else_stmt            : 55
empty                : 4 10 20 28 36 38 43 57 61 63 65 68 95 97
expr                 : 55 58 62 67 88 94 96 104 111 111 112 112 113 113 114 114 115 115 116 116 117 117 118 118 119 119 120 120 121 121 122 122 123 124 125
field_access         : 98
field_decl           : 11
float_literal        : 74
for_cond1            : 59
for_cond2            : 59
for_cond3            : 59
for_stmt             : 47
formal_param         : 35 37
formals              : 31 32 34
formals_cont         : 35 37
if_stmt              : 45
int_literal          : 73
lhs                  : 90 104 107 108 109 110
literal              : 85
method_decl          : 12
method_header        : 30
method_invocation    : 91 127
modifier             : 14 31 32 34
null_literal         : 76
post_assign          : 105
pre_assign           : 106
primary              : 99 101 102
program              : 0
program_header       : 1
return_stmt          : 48
return_val           : 66
semi_colon_stmt      : 54
stmt                 : 42 55 56 58 59
stmt_expr            : 60 64 69
stmt_expr_stmt       : 49
stmt_list            : 30 33 40 42
string_literal       : 75
super                : 87
this                 : 86
type                 : 21 31 39
var_decl             : 14 44
var_decl_finalize    : 53
variable             : 26 27 39
variables            : 21
variables_cont       : 26 27
while_stmt           : 46

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_header class_decl_list
    (2) program_header -> .

    CLASS           reduce using rule 2 (program_header -> .)
    $end            reduce using rule 2 (program_header -> .)

    program                        shift and go to state 1
    program_header                 shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> program_header . class_decl_list
    (3) class_decl_list -> . class_decl class_decl_list
    (4) class_decl_list -> . empty
    (5) class_decl -> . class_header LEFT_CB class_body_decl_list RIGHT_CB
    (128) empty -> .
    (6) class_header -> . CLASS ID
    (7) class_header -> . CLASS ID EXTENDS ID

    $end            reduce using rule 128 (empty -> .)
    CLASS           shift and go to state 7

    class_decl_list                shift and go to state 3
    class_decl                     shift and go to state 4
    empty                          shift and go to state 5
    class_header                   shift and go to state 6

state 3

    (1) program -> program_header class_decl_list .

    $end            reduce using rule 1 (program -> program_header class_decl_list .)


state 4

    (3) class_decl_list -> class_decl . class_decl_list
    (3) class_decl_list -> . class_decl class_decl_list
    (4) class_decl_list -> . empty
    (5) class_decl -> . class_header LEFT_CB class_body_decl_list RIGHT_CB
    (128) empty -> .
    (6) class_header -> . CLASS ID
    (7) class_header -> . CLASS ID EXTENDS ID

    $end            reduce using rule 128 (empty -> .)
    CLASS           shift and go to state 7

    class_decl                     shift and go to state 4
    class_decl_list                shift and go to state 8
    empty                          shift and go to state 5
    class_header                   shift and go to state 6

state 5

    (4) class_decl_list -> empty .

    $end            reduce using rule 4 (class_decl_list -> empty .)


state 6

    (5) class_decl -> class_header . LEFT_CB class_body_decl_list RIGHT_CB

    LEFT_CB         shift and go to state 9


state 7

    (6) class_header -> CLASS . ID
    (7) class_header -> CLASS . ID EXTENDS ID

    ID              shift and go to state 10


state 8

    (3) class_decl_list -> class_decl class_decl_list .

    $end            reduce using rule 3 (class_decl_list -> class_decl class_decl_list .)


state 9

    (5) class_decl -> class_header LEFT_CB . class_body_decl_list RIGHT_CB
    (8) class_body_decl_list -> . class_body_decl class_body_decl_cont
    (11) class_body_decl -> . field_decl
    (12) class_body_decl -> . method_decl
    (13) class_body_decl -> . constructor_decl
    (14) field_decl -> . modifier var_decl
    (30) method_decl -> . method_header LEFT_CB stmt_list RIGHT_CB
    (33) constructor_decl -> . constructor_header LEFT_CB stmt_list RIGHT_CB
    (15) modifier -> . PUBLIC STATIC
    (16) modifier -> . PRIVATE STATIC
    (17) modifier -> . PUBLIC
    (18) modifier -> . PRIVATE
    (19) modifier -> . STATIC
    (20) modifier -> . empty
    (31) method_header -> . modifier type ID LEFT_PN formals RIGHT_PN
    (32) method_header -> . modifier TYPE_VOID ID LEFT_PN formals RIGHT_PN
    (34) constructor_header -> . modifier ID LEFT_PN formals RIGHT_PN
    (128) empty -> .

    PUBLIC          shift and go to state 19
    PRIVATE         shift and go to state 21
    STATIC          shift and go to state 20
    TYPE_VOID       reduce using rule 128 (empty -> .)
    ID              reduce using rule 128 (empty -> .)
    TYPE_INT        reduce using rule 128 (empty -> .)
    TYPE_FLOAT      reduce using rule 128 (empty -> .)
    TYPE_BOOLEAN    reduce using rule 128 (empty -> .)

    class_body_decl_list           shift and go to state 11
    class_body_decl                shift and go to state 12
    field_decl                     shift and go to state 13
    method_decl                    shift and go to state 14
    constructor_decl               shift and go to state 15
    modifier                       shift and go to state 16
    method_header                  shift and go to state 17
    constructor_header             shift and go to state 18
    empty                          shift and go to state 22

state 10

    (6) class_header -> CLASS ID .
    (7) class_header -> CLASS ID . EXTENDS ID

    LEFT_CB         reduce using rule 6 (class_header -> CLASS ID .)
    EXTENDS         shift and go to state 23


state 11

    (5) class_decl -> class_header LEFT_CB class_body_decl_list . RIGHT_CB

    RIGHT_CB        shift and go to state 24


state 12

    (8) class_body_decl_list -> class_body_decl . class_body_decl_cont
    (9) class_body_decl_cont -> . class_body_decl class_body_decl_cont
    (10) class_body_decl_cont -> . empty
    (11) class_body_decl -> . field_decl
    (12) class_body_decl -> . method_decl
    (13) class_body_decl -> . constructor_decl
    (128) empty -> .
    (14) field_decl -> . modifier var_decl
    (30) method_decl -> . method_header LEFT_CB stmt_list RIGHT_CB
    (33) constructor_decl -> . constructor_header LEFT_CB stmt_list RIGHT_CB
    (15) modifier -> . PUBLIC STATIC
    (16) modifier -> . PRIVATE STATIC
    (17) modifier -> . PUBLIC
    (18) modifier -> . PRIVATE
    (19) modifier -> . STATIC
    (20) modifier -> . empty
    (31) method_header -> . modifier type ID LEFT_PN formals RIGHT_PN
    (32) method_header -> . modifier TYPE_VOID ID LEFT_PN formals RIGHT_PN
    (34) constructor_header -> . modifier ID LEFT_PN formals RIGHT_PN

    RIGHT_CB        reduce using rule 128 (empty -> .)
    TYPE_VOID       reduce using rule 128 (empty -> .)
    ID              reduce using rule 128 (empty -> .)
    TYPE_INT        reduce using rule 128 (empty -> .)
    TYPE_FLOAT      reduce using rule 128 (empty -> .)
    TYPE_BOOLEAN    reduce using rule 128 (empty -> .)
    PUBLIC          shift and go to state 19
    PRIVATE         shift and go to state 21
    STATIC          shift and go to state 20

    class_body_decl                shift and go to state 25
    class_body_decl_cont           shift and go to state 26
    empty                          shift and go to state 27
    field_decl                     shift and go to state 13
    method_decl                    shift and go to state 14
    constructor_decl               shift and go to state 15
    modifier                       shift and go to state 16
    method_header                  shift and go to state 17
    constructor_header             shift and go to state 18

state 13

    (11) class_body_decl -> field_decl .

    PUBLIC          reduce using rule 11 (class_body_decl -> field_decl .)
    PRIVATE         reduce using rule 11 (class_body_decl -> field_decl .)
    STATIC          reduce using rule 11 (class_body_decl -> field_decl .)
    TYPE_VOID       reduce using rule 11 (class_body_decl -> field_decl .)
    ID              reduce using rule 11 (class_body_decl -> field_decl .)
    TYPE_INT        reduce using rule 11 (class_body_decl -> field_decl .)
    TYPE_FLOAT      reduce using rule 11 (class_body_decl -> field_decl .)
    TYPE_BOOLEAN    reduce using rule 11 (class_body_decl -> field_decl .)
    RIGHT_CB        reduce using rule 11 (class_body_decl -> field_decl .)


state 14

    (12) class_body_decl -> method_decl .

    PUBLIC          reduce using rule 12 (class_body_decl -> method_decl .)
    PRIVATE         reduce using rule 12 (class_body_decl -> method_decl .)
    STATIC          reduce using rule 12 (class_body_decl -> method_decl .)
    TYPE_VOID       reduce using rule 12 (class_body_decl -> method_decl .)
    ID              reduce using rule 12 (class_body_decl -> method_decl .)
    TYPE_INT        reduce using rule 12 (class_body_decl -> method_decl .)
    TYPE_FLOAT      reduce using rule 12 (class_body_decl -> method_decl .)
    TYPE_BOOLEAN    reduce using rule 12 (class_body_decl -> method_decl .)
    RIGHT_CB        reduce using rule 12 (class_body_decl -> method_decl .)


state 15

    (13) class_body_decl -> constructor_decl .

    PUBLIC          reduce using rule 13 (class_body_decl -> constructor_decl .)
    PRIVATE         reduce using rule 13 (class_body_decl -> constructor_decl .)
    STATIC          reduce using rule 13 (class_body_decl -> constructor_decl .)
    TYPE_VOID       reduce using rule 13 (class_body_decl -> constructor_decl .)
    ID              reduce using rule 13 (class_body_decl -> constructor_decl .)
    TYPE_INT        reduce using rule 13 (class_body_decl -> constructor_decl .)
    TYPE_FLOAT      reduce using rule 13 (class_body_decl -> constructor_decl .)
    TYPE_BOOLEAN    reduce using rule 13 (class_body_decl -> constructor_decl .)
    RIGHT_CB        reduce using rule 13 (class_body_decl -> constructor_decl .)


state 16

    (14) field_decl -> modifier . var_decl
    (31) method_header -> modifier . type ID LEFT_PN formals RIGHT_PN
    (32) method_header -> modifier . TYPE_VOID ID LEFT_PN formals RIGHT_PN
    (34) constructor_header -> modifier . ID LEFT_PN formals RIGHT_PN
    (21) var_decl -> . type variables SEMI_COLON
    (22) type -> . TYPE_INT
    (23) type -> . TYPE_FLOAT
    (24) type -> . TYPE_BOOLEAN
    (25) type -> . ID

    TYPE_VOID       shift and go to state 31
    ID              shift and go to state 30
    TYPE_INT        shift and go to state 32
    TYPE_FLOAT      shift and go to state 33
    TYPE_BOOLEAN    shift and go to state 34

    var_decl                       shift and go to state 28
    type                           shift and go to state 29

state 17

    (30) method_decl -> method_header . LEFT_CB stmt_list RIGHT_CB

    LEFT_CB         shift and go to state 35


state 18

    (33) constructor_decl -> constructor_header . LEFT_CB stmt_list RIGHT_CB

    LEFT_CB         shift and go to state 36


state 19

    (15) modifier -> PUBLIC . STATIC
    (17) modifier -> PUBLIC .

    STATIC          shift and go to state 37
    TYPE_VOID       reduce using rule 17 (modifier -> PUBLIC .)
    ID              reduce using rule 17 (modifier -> PUBLIC .)
    TYPE_INT        reduce using rule 17 (modifier -> PUBLIC .)
    TYPE_FLOAT      reduce using rule 17 (modifier -> PUBLIC .)
    TYPE_BOOLEAN    reduce using rule 17 (modifier -> PUBLIC .)


state 20

    (19) modifier -> STATIC .

    TYPE_VOID       reduce using rule 19 (modifier -> STATIC .)
    ID              reduce using rule 19 (modifier -> STATIC .)
    TYPE_INT        reduce using rule 19 (modifier -> STATIC .)
    TYPE_FLOAT      reduce using rule 19 (modifier -> STATIC .)
    TYPE_BOOLEAN    reduce using rule 19 (modifier -> STATIC .)


state 21

    (16) modifier -> PRIVATE . STATIC
    (18) modifier -> PRIVATE .

    STATIC          shift and go to state 38
    TYPE_VOID       reduce using rule 18 (modifier -> PRIVATE .)
    ID              reduce using rule 18 (modifier -> PRIVATE .)
    TYPE_INT        reduce using rule 18 (modifier -> PRIVATE .)
    TYPE_FLOAT      reduce using rule 18 (modifier -> PRIVATE .)
    TYPE_BOOLEAN    reduce using rule 18 (modifier -> PRIVATE .)


state 22

    (20) modifier -> empty .

    TYPE_VOID       reduce using rule 20 (modifier -> empty .)
    ID              reduce using rule 20 (modifier -> empty .)
    TYPE_INT        reduce using rule 20 (modifier -> empty .)
    TYPE_FLOAT      reduce using rule 20 (modifier -> empty .)
    TYPE_BOOLEAN    reduce using rule 20 (modifier -> empty .)


state 23

    (7) class_header -> CLASS ID EXTENDS . ID

    ID              shift and go to state 39


state 24

    (5) class_decl -> class_header LEFT_CB class_body_decl_list RIGHT_CB .

    CLASS           reduce using rule 5 (class_decl -> class_header LEFT_CB class_body_decl_list RIGHT_CB .)
    $end            reduce using rule 5 (class_decl -> class_header LEFT_CB class_body_decl_list RIGHT_CB .)


state 25

    (9) class_body_decl_cont -> class_body_decl . class_body_decl_cont
    (9) class_body_decl_cont -> . class_body_decl class_body_decl_cont
    (10) class_body_decl_cont -> . empty
    (11) class_body_decl -> . field_decl
    (12) class_body_decl -> . method_decl
    (13) class_body_decl -> . constructor_decl
    (128) empty -> .
    (14) field_decl -> . modifier var_decl
    (30) method_decl -> . method_header LEFT_CB stmt_list RIGHT_CB
    (33) constructor_decl -> . constructor_header LEFT_CB stmt_list RIGHT_CB
    (15) modifier -> . PUBLIC STATIC
    (16) modifier -> . PRIVATE STATIC
    (17) modifier -> . PUBLIC
    (18) modifier -> . PRIVATE
    (19) modifier -> . STATIC
    (20) modifier -> . empty
    (31) method_header -> . modifier type ID LEFT_PN formals RIGHT_PN
    (32) method_header -> . modifier TYPE_VOID ID LEFT_PN formals RIGHT_PN
    (34) constructor_header -> . modifier ID LEFT_PN formals RIGHT_PN

    RIGHT_CB        reduce using rule 128 (empty -> .)
    TYPE_VOID       reduce using rule 128 (empty -> .)
    ID              reduce using rule 128 (empty -> .)
    TYPE_INT        reduce using rule 128 (empty -> .)
    TYPE_FLOAT      reduce using rule 128 (empty -> .)
    TYPE_BOOLEAN    reduce using rule 128 (empty -> .)
    PUBLIC          shift and go to state 19
    PRIVATE         shift and go to state 21
    STATIC          shift and go to state 20

    class_body_decl                shift and go to state 25
    class_body_decl_cont           shift and go to state 40
    empty                          shift and go to state 27
    field_decl                     shift and go to state 13
    method_decl                    shift and go to state 14
    constructor_decl               shift and go to state 15
    modifier                       shift and go to state 16
    method_header                  shift and go to state 17
    constructor_header             shift and go to state 18

state 26

    (8) class_body_decl_list -> class_body_decl class_body_decl_cont .

    RIGHT_CB        reduce using rule 8 (class_body_decl_list -> class_body_decl class_body_decl_cont .)


state 27

    (10) class_body_decl_cont -> empty .
    (20) modifier -> empty .

    RIGHT_CB        reduce using rule 10 (class_body_decl_cont -> empty .)
    TYPE_VOID       reduce using rule 20 (modifier -> empty .)
    ID              reduce using rule 20 (modifier -> empty .)
    TYPE_INT        reduce using rule 20 (modifier -> empty .)
    TYPE_FLOAT      reduce using rule 20 (modifier -> empty .)
    TYPE_BOOLEAN    reduce using rule 20 (modifier -> empty .)


state 28

    (14) field_decl -> modifier var_decl .

    PUBLIC          reduce using rule 14 (field_decl -> modifier var_decl .)
    PRIVATE         reduce using rule 14 (field_decl -> modifier var_decl .)
    STATIC          reduce using rule 14 (field_decl -> modifier var_decl .)
    TYPE_VOID       reduce using rule 14 (field_decl -> modifier var_decl .)
    ID              reduce using rule 14 (field_decl -> modifier var_decl .)
    TYPE_INT        reduce using rule 14 (field_decl -> modifier var_decl .)
    TYPE_FLOAT      reduce using rule 14 (field_decl -> modifier var_decl .)
    TYPE_BOOLEAN    reduce using rule 14 (field_decl -> modifier var_decl .)
    RIGHT_CB        reduce using rule 14 (field_decl -> modifier var_decl .)


state 29

    (31) method_header -> modifier type . ID LEFT_PN formals RIGHT_PN
    (21) var_decl -> type . variables SEMI_COLON
    (26) variables -> . variable variables_cont
    (29) variable -> . ID

    ID              shift and go to state 41

    variables                      shift and go to state 42
    variable                       shift and go to state 43

state 30

    (34) constructor_header -> modifier ID . LEFT_PN formals RIGHT_PN
    (25) type -> ID .

    LEFT_PN         shift and go to state 44
    ID              reduce using rule 25 (type -> ID .)


state 31

    (32) method_header -> modifier TYPE_VOID . ID LEFT_PN formals RIGHT_PN

    ID              shift and go to state 45


state 32

    (22) type -> TYPE_INT .

    ID              reduce using rule 22 (type -> TYPE_INT .)


state 33

    (23) type -> TYPE_FLOAT .

    ID              reduce using rule 23 (type -> TYPE_FLOAT .)


state 34

    (24) type -> TYPE_BOOLEAN .

    ID              reduce using rule 24 (type -> TYPE_BOOLEAN .)


state 35

    (30) method_decl -> method_header LEFT_CB . stmt_list RIGHT_CB
    (42) stmt_list -> . stmt stmt_list
    (43) stmt_list -> . empty
    (45) stmt -> . if_stmt
    (46) stmt -> . while_stmt
    (47) stmt -> . for_stmt
    (48) stmt -> . return_stmt
    (49) stmt -> . stmt_expr_stmt
    (50) stmt -> . break_stmt
    (51) stmt -> . continue_stmt
    (52) stmt -> . block
    (53) stmt -> . var_decl_finalize
    (54) stmt -> . semi_colon_stmt
    (128) empty -> .
    (55) if_stmt -> . IF LEFT_PN expr RIGHT_PN stmt else_stmt
    (58) while_stmt -> . WHILE LEFT_PN expr RIGHT_PN stmt
    (59) for_stmt -> . FOR LEFT_PN for_cond1 SEMI_COLON for_cond2 SEMI_COLON for_cond3 RIGHT_PN stmt
    (66) return_stmt -> . RETURN return_val SEMI_COLON
    (69) stmt_expr_stmt -> . stmt_expr SEMI_COLON
    (70) break_stmt -> . BREAK SEMI_COLON
    (71) continue_stmt -> . CONTINUE SEMI_COLON
    (40) block -> . block_init LEFT_CB stmt_list RIGHT_CB
    (44) var_decl_finalize -> . var_decl
    (72) semi_colon_stmt -> . SEMI_COLON
    (126) stmt_expr -> . assign
    (127) stmt_expr -> . method_invocation
    (41) block_init -> .
    (21) var_decl -> . type variables SEMI_COLON
    (104) assign -> . lhs ASSIGN expr
    (105) assign -> . post_assign
    (106) assign -> . pre_assign
    (101) method_invocation -> . primary DOT ID LEFT_PN arguments RIGHT_PN
    (22) type -> . TYPE_INT
    (23) type -> . TYPE_FLOAT
    (24) type -> . TYPE_BOOLEAN
    (25) type -> . ID
    (98) lhs -> . field_access
    (107) post_assign -> . lhs INCREMENT
    (108) post_assign -> . lhs DECREMENT
    (109) pre_assign -> . INCREMENT lhs
    (110) pre_assign -> . DECREMENT lhs
    (85) primary -> . literal
    (86) primary -> . this
    (87) primary -> . super
    (88) primary -> . LEFT_PN expr RIGHT_PN
    (89) primary -> . NEW ID LEFT_PN arguments RIGHT_PN
    (90) primary -> . lhs
    (91) primary -> . method_invocation
    (99) field_access -> . primary DOT ID
    (100) field_access -> . ID
    (73) literal -> . int_literal
    (74) literal -> . float_literal
    (75) literal -> . string_literal
    (76) literal -> . null_literal
    (77) literal -> . boolean_true_literal
    (78) literal -> . boolean_false_literal
    (92) this -> . THIS
    (93) super -> . SUPER
    (79) int_literal -> . INT_CONST
    (80) float_literal -> . FLOAT_CONST
    (81) string_literal -> . STRING_CONST
    (82) null_literal -> . NULL
    (83) boolean_true_literal -> . TRUE
    (84) boolean_false_literal -> . FALSE

    RIGHT_CB        reduce using rule 128 (empty -> .)
    IF              shift and go to state 59
    WHILE           shift and go to state 61
    FOR             shift and go to state 62
    RETURN          shift and go to state 64
    BREAK           shift and go to state 66
    CONTINUE        shift and go to state 67
    SEMI_COLON      shift and go to state 63
    LEFT_CB         reduce using rule 41 (block_init -> .)
    TYPE_INT        shift and go to state 32
    TYPE_FLOAT      shift and go to state 33
    TYPE_BOOLEAN    shift and go to state 34
    ID              shift and go to state 77
    INCREMENT       shift and go to state 79
    DECREMENT       shift and go to state 80
    LEFT_PN         shift and go to state 60
    NEW             shift and go to state 84
    THIS            shift and go to state 91
    SUPER           shift and go to state 92
    INT_CONST       shift and go to state 93
    FLOAT_CONST     shift and go to state 94
    STRING_CONST    shift and go to state 95
    NULL            shift and go to state 96
    TRUE            shift and go to state 97
    FALSE           shift and go to state 98

    stmt_list                      shift and go to state 46
    stmt                           shift and go to state 47
    empty                          shift and go to state 48
    if_stmt                        shift and go to state 49
    while_stmt                     shift and go to state 50
    for_stmt                       shift and go to state 51
    return_stmt                    shift and go to state 52
    stmt_expr_stmt                 shift and go to state 53
    break_stmt                     shift and go to state 54
    continue_stmt                  shift and go to state 55
    block                          shift and go to state 56
    var_decl_finalize              shift and go to state 57
    semi_colon_stmt                shift and go to state 58
    stmt_expr                      shift and go to state 65
    block_init                     shift and go to state 68
    var_decl                       shift and go to state 69
    assign                         shift and go to state 70
    method_invocation              shift and go to state 71
    type                           shift and go to state 72
    lhs                            shift and go to state 73
    post_assign                    shift and go to state 74
    pre_assign                     shift and go to state 75
    primary                        shift and go to state 76
    field_access                   shift and go to state 78
    literal                        shift and go to state 81
    this                           shift and go to state 82
    super                          shift and go to state 83
    int_literal                    shift and go to state 85
    float_literal                  shift and go to state 86
    string_literal                 shift and go to state 87
    null_literal                   shift and go to state 88
    boolean_true_literal           shift and go to state 89
    boolean_false_literal          shift and go to state 90

state 36

    (33) constructor_decl -> constructor_header LEFT_CB . stmt_list RIGHT_CB
    (42) stmt_list -> . stmt stmt_list
    (43) stmt_list -> . empty
    (45) stmt -> . if_stmt
    (46) stmt -> . while_stmt
    (47) stmt -> . for_stmt
    (48) stmt -> . return_stmt
    (49) stmt -> . stmt_expr_stmt
    (50) stmt -> . break_stmt
    (51) stmt -> . continue_stmt
    (52) stmt -> . block
    (53) stmt -> . var_decl_finalize
    (54) stmt -> . semi_colon_stmt
    (128) empty -> .
    (55) if_stmt -> . IF LEFT_PN expr RIGHT_PN stmt else_stmt
    (58) while_stmt -> . WHILE LEFT_PN expr RIGHT_PN stmt
    (59) for_stmt -> . FOR LEFT_PN for_cond1 SEMI_COLON for_cond2 SEMI_COLON for_cond3 RIGHT_PN stmt
    (66) return_stmt -> . RETURN return_val SEMI_COLON
    (69) stmt_expr_stmt -> . stmt_expr SEMI_COLON
    (70) break_stmt -> . BREAK SEMI_COLON
    (71) continue_stmt -> . CONTINUE SEMI_COLON
    (40) block -> . block_init LEFT_CB stmt_list RIGHT_CB
    (44) var_decl_finalize -> . var_decl
    (72) semi_colon_stmt -> . SEMI_COLON
    (126) stmt_expr -> . assign
    (127) stmt_expr -> . method_invocation
    (41) block_init -> .
    (21) var_decl -> . type variables SEMI_COLON
    (104) assign -> . lhs ASSIGN expr
    (105) assign -> . post_assign
    (106) assign -> . pre_assign
    (101) method_invocation -> . primary DOT ID LEFT_PN arguments RIGHT_PN
    (22) type -> . TYPE_INT
    (23) type -> . TYPE_FLOAT
    (24) type -> . TYPE_BOOLEAN
    (25) type -> . ID
    (98) lhs -> . field_access
    (107) post_assign -> . lhs INCREMENT
    (108) post_assign -> . lhs DECREMENT
    (109) pre_assign -> . INCREMENT lhs
    (110) pre_assign -> . DECREMENT lhs
    (85) primary -> . literal
    (86) primary -> . this
    (87) primary -> . super
    (88) primary -> . LEFT_PN expr RIGHT_PN
    (89) primary -> . NEW ID LEFT_PN arguments RIGHT_PN
    (90) primary -> . lhs
    (91) primary -> . method_invocation
    (99) field_access -> . primary DOT ID
    (100) field_access -> . ID
    (73) literal -> . int_literal
    (74) literal -> . float_literal
    (75) literal -> . string_literal
    (76) literal -> . null_literal
    (77) literal -> . boolean_true_literal
    (78) literal -> . boolean_false_literal
    (92) this -> . THIS
    (93) super -> . SUPER
    (79) int_literal -> . INT_CONST
    (80) float_literal -> . FLOAT_CONST
    (81) string_literal -> . STRING_CONST
    (82) null_literal -> . NULL
    (83) boolean_true_literal -> . TRUE
    (84) boolean_false_literal -> . FALSE
